<resources>
    <string name="app_name">GroupProject476</string>
    <string name="welcome_message">Welcome to Fitness Plus</string>
    <string name="welcome_description">This app ______</string>
    <string name="login_button">Enter to Login</string>
    <string name="password_hint">Enter your password:</string>
    <string name="username_hint">Enter your username:</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_an_account">Create an Account</string>
    <string name="welcome">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="library">Workout Library</string>
    <string name="history">Workout History</string>
    <string name="log">Log Workout</string>
    <string name="record">Record</string>
    <string name="workout">Workout</string>
    <string name="workout_message">Input Your Workout</string>
    <string name="workout_entry">Enter Workout</string>
    <string name="workout_cals">Enter Calories Burned</string>
    <string name="workout_length">Enter Workout Length (minutes)</string>
    <string name="home">Home</string>
    <string name="find_nearest_gym">Find Nearest Gym</string>
    <string name="register_prompt">Register a New Email</string>
    <string name="backButton">Back</string>
    <string name="delete">Delete</string>
    <string name="recommendation">Todays recommendation</string>
    <string name="sunRec">"Start your week strong! Try a full-body workout today."</string>
    <string name="wedRec">How about a cardio session today?</string>
    <string name="mondayRec">Today we do push!</string>
    <string name="tuesRec">Perfect day for strength training!</string>
    <string name="thursRec">Almost the weekend, lets do legs!</string>
    <string name="satRec">Try a new outdoor activity today!</string>
    <string name="friRec">Rest and recover. You deserve it!</string>
    <string name="defaultRec">Keep moving forward!</string>
    <string name="rec">Try this workout today!</string>
    <string name="video_mon">https://www.youtube.com/embed/Yx0BW-H5W0Y</string>
    <string name="video_tues">https://www.youtube.com/embed/L_tpvTJyu7I</string>
    <string name="video_wed">https://www.youtube.com/embed/kZDvg92tTMc</string>
    <string name="video_thurs">https://www.youtube.com/embed/FNw1n3pz9Ac</string>
    <string name="video_fri">https://www.youtube.com/embed/C2HX2pNbUCM</string>
    <string name="video_sat">https://www.youtube.com/embed/D3ibxlPoino</string>
    <string name="video_sun">https://www.youtube.com/embed/MTF8-wuTH4Y</string>
    <string name="video_default">https://www.youtube.com/embed/MTF8-wuTH4Y</string>
    <string name="mon">Try this Lower Body workout today!</string>
    <string name="tues">Try this Upper Body workout today!</string>
    <string name="wed">Try this Cardio workout today!</string>
    <string name="thurs">Try this Lower Body workout today!</string>
    <string name="fri">Try this Pilates workout today!</string>
    <string name="sat">Try this Upper Body workout today!</string>
    <string name="sun">Try this Full Body workout today!</string>
    <string name="app_logo">Fitness Plus Logo</string>
    <string name="enter_gym">Select a Gym or Enter One</string>
    <string name="planet_fitness">Planet Fitness</string>
    <string name="lifetime_fitness">Lifetime Fitness</string>
    <string name="powerhouse_gym">Powerhouse Gym</string>
    <string name="destination">Or enter a destination manually</string>
    <string name="curr_loc">Your current location will appear here</string>
    <string name="show_route">Show Route</string>

</resources>
