<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#C0C0C0"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_gym"
            android:textSize="18sp"
            android:layout_marginBottom="12dp" />

        <RadioGroup
            android:id="@+id/gymRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioPlanetFitness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:text="@string/planet_fitness" />

            <RadioButton
                android:id="@+id/radioLifetimeFitness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:text="@string/lifetime_fitness" />

            <RadioButton
                android:id="@+id/radioPowerhouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:text="@string/powerhouse_gym" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTextLocationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination"
            android:inputType="text"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/textDistanceToGym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curr_loc"
            android:textSize="16sp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center" />


        <Button
            android:id="@+id/buttonShowRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:text="@string/show_route" />
        <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:text="@string/home"
            android:layout_marginTop="24dp" />

    </LinearLayout>
</ScrollView>
