<?xml version="1.0" encoding="utf-8"?>
<edu.msu.ellio357.groupproject476.ZoomLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/history_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/history"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <!-- RecyclerView takes remaining space -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewWorkouts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <!-- Bottom Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">

            <Button
                android:id="@+id/library_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/library" />

            <Button
                android:id="@+id/log_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/log" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/home" />
        </LinearLayout>
    </LinearLayout>
</edu.msu.ellio357.groupproject476.ZoomLayout>